# pyteomics-MCP

./: README.md  main.py  pyproject.toml  requirements.txt  server.py
tools/: annotation_tool.py  differential_analysis_tool.py  fasta_tool.py  feature_filter_tool.py  ms_loading_tool.py  pathway_enrichment_tool.py  quantification_tool.py
utils/: utils.py
